src/yini_test/cases/golden/strict/valid/numbers/negative-float.strict.yini
@yini strict

^ Numbers
val = -3.14

/END

