src/yini_test/cases/golden/strict/invalid/numbers/malformed-float-double-dot.strict.yini
@yini strict

^ Numbers
val = 3.14.15

/END

